fixes #21
More than 5 child product categories creates a horizontal scroll

--- a/assets/less/widgets.less
+++ b/assets/less/widgets.less
@@ -213,7 +213,8 @@
                         position: absolute;
                         left: 90%;
                         top: -50px;
-                        white-space: nowrap;
+                        // white-space: nowrap;
+                        min-width: 200%;
                         z-index: 99;
 
                         .sub-block {
@@ -223,6 +224,7 @@
                             zoom: 1;
                             vertical-align: top;
                             padding-right: 20px;
+                            padding-bottom: 20px;
                             width: 200px;
                             font-size: 12px;
 
